--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint --max-warnings 2",
     "start": "react-native start",
     "test": "jest",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write ./src",
     "lint:ts": "tsc --project ./tsconfig.json --skipLibCheck --noEmit",
     "pod:install": "pod install --project-directory=ios",
-    "lint:fix": "yarn lint --fix",
-    "lint-staged": "yarn lint:fix"
+    "lint": "eslint --max-warnings 2",
+    "lint:fix": "yarn lint --fix"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "yarn lint:fix"
+    ]
   },
   "dependencies": {
     "react": "18.2.0",
