--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-logs": "^5.0.1",
+    "react-native-svg": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.23.2",
