--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,5 +64,10 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
+  ],
+  "include": [
+    "src/**/*",
+    "src/custom.d.ts",
+    "assets/**/*",
   ]
 }
