--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "2.8.8",
     "prettier-eslint": "15.0.1",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   }
