--- a/package.json
+++ b/package.json
@@ -22,11 +22,18 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native/metro-config": "^0.73.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "metro-config": "^0.80.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-logs": "^5.0.1",
-    "react-native-svg": "^14.0.0"
+    "react-native-paper": "^5.11.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.23.2",
