--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -1,5 +1,5 @@
 # This `.xcode.env` file is versioned and is used to source the environment
-# used when running script phases inside Xcode.
+# used when running script phases inside Xcode.i
 # To customize your local environment, you can create an `.xcode.env.local`
 # file that is not versioned.
 
@@ -8,4 +8,4 @@
 # Customize the NODE_BINARY variable here.
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
-export NODE_BINARY=$(command -v node)
+export NODE_BINARY="/opt/homebrew/opt/node@18/bin/node"
