--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-google-signin/google-signin": "10.1.1",
+    "@react-native-firebase/app": "18.6.2",
+    "@react-native-firebase/auth": "18.6.2",
     "@react-native/metro-config": "^0.73.2",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
