--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native/metro-config": "^0.73.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "metro-config": "^0.80.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
