--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react-native": "0.72.6",
     "react-native-logs": "^5.0.1",
     "react-native-paper": "^5.11.1",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3"
