--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "metro-config": "^0.80.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-image-picker": "^7.1.0",
     "react-native-logs": "^5.0.1",
     "react-native-paper": "^5.11.1",
+    "react-native-permissions": "^3.10.1",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-snackbar": "^2.6.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3"
